# narratts

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  PRODUCT.md  README.md  SECURITY.md  compose.yaml  pyproject.toml  qwen3_tts.py
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  DEPLOYMENT.md  INSTALLATION.md
service/: __init__.py  app.py  cli.py  config.py  engine.py  models.py  requirements.txt  storage.py
service/docs/: AI_GUIDE.md  __init__.py
service/static/: __init__.py  app.css  app.js  index.html  raven.js  swarm.js
service/static/assets/: __init__.py  narra-raven.glb  raven-rigged.glb
tests/: test_config.py  test_models.py  test_storage.py
tools/: build_narra_raven.py
