[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narratts"
version = "1.0.0"
description = "Self-hosted Qwen3-TTS studio and API for voice cloning, voice design, and custom voices"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Lance Smith" }]
keywords = ["text-to-speech", "tts", "qwen", "voice-cloning", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "fastapi>=0.110,<1",
  "numpy>=1.26",
  "pydantic>=2.5,<3",
  "python-dotenv>=1.0,<2",
  "python-multipart>=0.0.9",
  "qwen-tts>=0.1.1",
  "soundfile>=0.12",
  "uvicorn[standard]>=0.27,<1",
]

[project.optional-dependencies]
audio-tools = [
  "demucs>=4.0,<5",
  "faster-whisper>=1.0,<2",
]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.9",
]

[project.scripts]
narratts = "service.cli:main"

[project.urls]
Homepage = "https://github.com/lancesmithcc/narratts"
Documentation = "https://github.com/lancesmithcc/narratts#documentation"
Issues = "https://github.com/lancesmithcc/narratts/issues"
Source = "https://github.com/lancesmithcc/narratts"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["service*"]
namespaces = false

[tool.setuptools.package-data]
service = ["static/*.html", "static/*.css", "static/*.js", "static/assets/narra-raven.glb", "docs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP045"]
